@@ -1,3 +1,11 @@
+2008-03-14  Suman Manjunath  <msuman@novell.com>
+
+	** Fix for bug #268259 (bugzilla.novell.com)
+
+	* calendar/e-cal-backend-exchange.c: (open_calendar): Don't require
+	restart of Evolution to create appointment on switching from offline
+	to online mode. 
+
 2008-03-10  Srinivasa Ragavan  <sragavan@novell.com>
 
 	* NEWS, configure.in: Evolution Exchange 2.22.0 release
